--- a/stylesheets/works.css
+++ b/stylesheets/works.css
@@ -86,7 +86,13 @@
 	}
 }
 @media (pointer:none){
-	.middle, .more-detail {
+	.project-img-container img {
+		z-index: 10;
+	}
+	.more-detail {
+		z-index: -10;
+	}
+	.middle {
 		z-index: -10;
 	}
 }
